modules/gdscript/tests/scripts/runtime/errors/constant_array_push_back.gd
const array: Array = [0]

func test():
	array.push_back(0)
